@startuml

title __ACADEMIA-09's Class Diagram__\n

  namespace ch.bfh.ti.academia {
    namespace authentication {
      class ch.bfh.ti.academia.authentication.AuthLogin {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace authentication {
      class ch.bfh.ti.academia.authentication.AuthResponse {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace authentication {
      class ch.bfh.ti.academia.authentication.AuthenticationController {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace authentication {
      class ch.bfh.ti.academia.authentication.AuthenticationFilter {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace enrollment {
      class ch.bfh.ti.academia.enrollment.Enrollment {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace enrollment {
      class ch.bfh.ti.academia.enrollment.EnrollmentController {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace enrollment {
      class ch.bfh.ti.academia.enrollment.EnrollmentRepository {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace enrollment {
      class ch.bfh.ti.academia.enrollment.Grade {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace module {
      class ch.bfh.ti.academia.module.Module {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace module {
      class ch.bfh.ti.academia.module.ModuleController {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace module {
      class ch.bfh.ti.academia.module.ModuleDTO {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace module {
      class ch.bfh.ti.academia.module.ModuleRepository {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace modulerun {
       class ch.bfh.ti.academia.modulerun.Modulerun {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace modulerun {
       class ch.bfh.ti.academia.modulerun.ModulerunController {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace modulerun {
       class ch.bfh.ti.academia.modulerun.ModulerunRepository {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace person {
      class ch.bfh.ti.academia.person.Person {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace person {
      class ch.bfh.ti.academia.person.PersonController {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace person {
      class ch.bfh.ti.academia.person.PersonDTO {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace person {
      class ch.bfh.ti.academia.person.PersonRepository {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace util {
      class ch.bfh.ti.academia.util.ConnectionManager {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace util {
      class ch.bfh.ti.academia.util.LoggingFilter {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace util {
      class ch.bfh.ti.academia.util.MediaTypeFilter {
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace util {
      class ch.bfh.ti.academia.util.ObjectMapperFactory {
      }
    }
  }
  

  ch.bfh.ti.academia.authentication.AuthenticationController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.authentication.AuthenticationController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager
  ch.bfh.ti.academia.authentication.AuthenticationFilter -up-|> jakarta.servlet.http.HttpFilter
  ch.bfh.ti.academia.enrollment.EnrollmentController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.enrollment.EnrollmentController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager
  ch.bfh.ti.academia.module.Module o-- ch.bfh.ti.academia.person.PersonDTO : coordinator
  ch.bfh.ti.academia.module.ModuleController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.module.ModuleController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager
  ch.bfh.ti.academia.modulerun.Modulerun o-- ch.bfh.ti.academia.person.PersonDTO : coordinator
  ch.bfh.ti.academia.modulerun.ModulerunController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.modulerun.ModulerunController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager
  ch.bfh.ti.academia.person.PersonController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.person.PersonController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager
  ch.bfh.ti.academia.util.LoggingFilter .up.|> jakarta.servlet.Filter
  ch.bfh.ti.academia.util.MediaTypeFilter .up.|> jakarta.servlet.Filter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
